--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "node": ">=0.12.0"
   },
   "dependencies": {
+    "ftpd": "^0.2.15",
     "request": "2.65.x"
   },
   "author": "PatchworkBoy (aka Marci) <apatchworkboy@gmail.com> (https://github.com/patchworkboy)",
